tests/ui/function-pointer/signature-mismatch.stderr
error[E0605]: non-primitive cast: `fn(_, _) -> <_ as Mul<_>>::Output {<_ as Mul<_>>::mul}` as `for<'a> fn(_, &'a _)`
  --> $DIR/signature-mismatch.rs:4:54
   |
LL |     let _ = [std::ops::Add::add, std::ops::Mul::mul, std::ops::Mul::mul as fn(_, &_)];
   |                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ invalid cast

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0605`.
